--- a/index.html
+++ b/index.html
@@ -26,6 +26,8 @@
       from{}
       to{transform: rotate3D(1,0.5,0.5,120deg);transform: rotateX(150deg);}
     }
+    <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
+<link rel="icon" href="/favicon.ico" type="image/x-icon">
   </style>
 </head>
 <body>
